# torosuke

./: .gitignore  LICENSE  README.md  default.nix  torosuke.cabal
app/: cli.hs  histo-analyst.hs  histo-crawler.hs  live-crawler.hs
src/Torosuke/: Binance.hs  Runner.hs  Store.hs  Ta.hs  Types.hs  Ui.hs
src/Torosuke/Common/: Store.hs  Types.hs
