cabal-version:       3.0
name:                torosuke
version:             0.0.0.1
homepage:            https://github.com/morucci/torosuke#readme
bug-reports:         https://github.com/morucci/torosuke/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Torosuke authors
maintainer:          Torosuke authors <fboucher@redhat.com>
copyright:           2021 Torosuke authors
category:            Software
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/morucci/torosuke.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wno-missing-pattern-synonym-signatures
                       --write-ghc-environment-files=always
                       -- Enable stan integration
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  LambdaCase,
                       NamedFieldPuns,
                       NamedWildCards,
                       NoImplicitPrelude,
                       OverloadedStrings,
                       RecordWildCards,
                       DeriveGeneric

library
  import:              common-options
  build-depends:       aeson
                     , base                       < 5
                     , http-client                < 0.8
                     , http-client-tls            < 0.4
                     , relude                     > 1.0.0.0
                     , time                       < 1.10
                     , vector                     < 0.12.4
                     , scientific                 < 0.3.6.3
                     , directory                  < 1.3.6.1
  hs-source-dirs:      src
  exposed-modules:     Torosuke.Binance
                     , Torosuke.Common.Types
                     , Torosuke.Common.Store
                     , Torosuke.Ta

executable torosuke-cli
  import:              common-options
  hs-source-dirs:      app
  main-is:             cli.hs
  build-depends:       base
                     , relude                     > 1.0.0.0
