cabal-version:       3.0
name:                torosuke
version:             0.0.0.1
homepage:            https://github.com/morucci/torosuke#readme
bug-reports:         https://github.com/morucci/torosuke/issues
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Torosuke authors
maintainer:          Torosuke authors <fboucher@redhat.com>
copyright:           2021 Torosuke authors
category:            Software
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/morucci/torosuke.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  LambdaCase,
                       NamedFieldPuns,
                       NamedWildCards,
                       NoImplicitPrelude,
                       OverloadedStrings,
                       RecordWildCards,
                       DeriveGeneric,
                       FlexibleContexts,
                       FlexibleInstances,
                       MultiParamTypeClasses

library
  import:              common-options
  build-depends:       aeson
                     , base                       < 5
                     , http-client                < 0.8
                     , http-client-tls            < 0.4
                     , http-types
                     , relude                     < 0.8.0
                     , exceptions
                     , time                       < 1.10
                     , text                       < 1.2.5
                     , vector                     < 0.12.4
                     , scientific
                     , directory                  < 1.3.6.1
                     , mtl                        < 2.2.3
                     , safe-exceptions            < 0.1.7.3
                     , async
                     , retry
                     , unordered-containers       < 0.2.15
                     , vty
                     , brick                      < 0.65
                     , witch                      < 0.3.5.0
  hs-source-dirs:      src
  exposed-modules:     Torosuke.Binance
                     , Torosuke.Types
                     , Torosuke.Store
                     , Torosuke.Ta
                     , Torosuke.Runner
                     , Torosuke.Ui

executable torosuke-live-crawler
  import:              common-options
  hs-source-dirs:      app
  main-is:             live-crawler.hs
  build-depends:       base
                     , torosuke
                     , relude                     < 0.8.0
                     , optparse-generic           < 1.5
                     , mtl                        < 2.2.3

executable torosuke-histo-crawler
  import:              common-options
  hs-source-dirs:      app
  main-is:             histo-crawler.hs
  build-depends:       base
                     , torosuke
                     , relude                     < 0.8.0
                     , optparse-generic           < 1.5
                     , time                       < 1.10
                     , mtl                        < 2.2.3

executable torosuke-histo-analyst
  import:              common-options
  hs-source-dirs:      app
  main-is:             histo-analyst.hs
  build-depends:       base
                     , torosuke
                     , relude                     < 0.8.0
                     , optparse-generic           < 1.5
                     , time                       < 1.10
                     , mtl                        < 2.2.3
